--- a/miniQQ/css/qq.css
+++ b/miniQQ/css/qq.css
@@ -2,7 +2,7 @@
 a{text-decoration: none;}
 img{border: 0;}
 
-#back{background-image:url("../image/bg_2.jpg");padding: 10px 0 55px 0;}
+#back{background-image:url("../image/bg_3.jpg");padding: 10px 0 55px 0;background-repeat: no-repeat;background-size: 100% 100%}
 #qq{width: 280px;height: 550px;margin: 50px 0 0 100px;border: 1px solid #bbb;border-radius: 10px;box-shadow: 3px 3px 10px rgba(0,0,0,0.3);}
 
 /*qq标题*/
@@ -11,22 +11,24 @@ img{border: 0;}
 #closeimage{width: 35px;height: 35px;margin: 5px 0 0 8px; float: right; background-image: url("../image/close.png");background-repeat: no-repeat;cursor: pointer;}
 
 /*用户信息*/
-#myInfo{width: 100%; height: 100px; border-bottom: 1px solid #bbb;}
-#myHead{width: 60px;height: 60px;border: 1px solid #fff; background-image: url("../image/myHead.png");float: left;background-repeat: no-repeat;margin: 20px 0 0 10px;}
-#myName{font-size: 23px;color: black;font-size: bold;  font-family: inherit;display: block;line-height: 100px;}
+#myInfo{width: 100%; height: 100px; }
+#myHead{width: 40px;height: 40px;border: 4px solid #fff; background-image: url("../image/myHead.png");float: left;background-repeat: no-repeat;margin: 20px 0 0 10px;}
+#myName{font-size: 16px;color: black;font-size: bold;  font-family: 微软雅黑;display: block;line-height: 70px;}
+.gongNeng{width: 207px;height: 20px;background-image: url("../image/icons_list.png");background-repeat: no-repeat;margin: 10px;}
+.gong{width: 15px;height: 15px;cursor: pointer;float: left;margin-left: 5px;cursor: pointer;}
 
 /*会话头*/
-#huihua{width: 100%;height: 45px;background-color: #444444;border-top-left-radius: 5px;border-top-right-radius: 5px}
+#huihua{width: 100%;height: 45px;background-color: #333333;border-top-left-radius: 5px;border-top-right-radius: 5px}
 #huiHuaA{font-size: 20px;color: rgb(255, 251, 240);font-family: 微软雅黑;text-align: center;width:266px;height: 45px; display: block;line-height: 45px;}
 
 /*好友列表*/
 #friendList{width: 100%;height: 300px;overflow: auto;background-color: #FAFFF0}
 .friendA{width: 100%;height: 60px;padding: 5px 0 5px 0;cursor: pointer; border-bottom: 1px solid #999;}
-.friendA:hover{background-color:#dcdcdc}
-.friendHeadImage{width: 60px;height: 60px;padding: 0 0 0 5px;background-image: url("../image/headImage.png");float: left;}
+.friendA:hover{background-color:#dcdcdc;padding-top: 5px}
+.friendHeadImage{margin-top: 10px;margin-left: 5px; width: 40px;height: 40px;padding: 0 0 0 5px;background-image: url("../image/headImage.jpg");float: left;background-size: 40px 40px;background-repeat: no-repeat;}
 .friendInfo{width: 180px;height:60px;float:left;padding: 0 0 0 10px }
-.friendNickName{font-size: 17px;color: black;font-family: inherit;display: block;line-height: 30px;}
-.friendShuoShuo{font-size: 14px;color: #999;font-family: 微软雅黑； text-shadow:1px 1px 1px #fff;display: block;line-height: 30px;}
+.friendNickName{font-size: 15px;color: black;font-family: 微软雅黑;display: block;line-height: 32px;}
+.friendShuoShuo{font-size: 10px;color: #999;font-family: 微软雅黑； text-shadow:1px 1px 1px #fff;display: block;line-height: 20px;}
 
 /*qqchat*/
 .qqChat{width: 700px;height: 500px;margin: 30px 0 0 80px;position: absolute;}
@@ -41,4 +43,14 @@ img{border: 0;}
 .shuRuKhuang{width: 420px;height: 35px;border: 1px solid #222;float: left;margin: 8px 8px 7px 100px;background-color: #fff;}
 .fasong{width: 100px;height: 32px;border: 1px solid #222;border-radius: 7px;float: right;margin: 8px 15px 7px ;background-color: #2894ff ;/*后面为字体居中*/color: #fff;line-height: 35px;font-family: 微软雅黑;font-size: 14px; text-align: center; cursor: pointer;}
 
-/*end  50px*/
+/*contrl*/
+#contrl{width: 280px;height: 70px;background-color: #373737;border-radius: 7px}
+#contrlhuiHua{width: 70px;height: 70px;float: left;background-image: url("../image/huiHuaclick.png");background-repeat: no-repeat;cursor: pointer;background-color: #1E1E1E;border-bottom-left-radius: 7px}
+#contrllianXiren{ width: 70px;height: 70px;float: left;background-image: url("../image/lianXiren.png");background-repeat: no-repeat;cursor: pointer;}
+#contrlfaXian{width: 70px;height: 70px;float: left;background-image: url("../image/faXian.png");background-repeat: no-repeat;cursor: pointer;}
+#contrlsheZhi{width: 70px;height: 70px;float: left;background-image: url("../image/sheZhi.png");background-repeat: no-repeat;cursor: pointer;border-bottom-right-radius: 7px}
+.wenZi{color: #FFFFFF;font-family: 微软雅黑;font-size: 12px;}
+#a{width: 36px;height: 12px;margin: 45px 0 0 15px}
+#b{width: 36px;height: 12px;margin: 45px 0 0 14px}
+#c{width: 36px;height: 12px;margin: 45px auto}
+#d{width: 36px;height: 12px;margin: 45px auto}
