--- a/miniQQ/css/qq.css
+++ b/miniQQ/css/qq.css
@@ -1,9 +1,10 @@
 *{margin:0;padding: 0;}
 a{text-decoration: none;}
 img{border: 0;}
+li{list-style: none;}
 
 #back{background-image:url("../image/1.jpg");padding: 50px 0 55px 0;background-repeat: no-repeat;background-size: 100% }
-#qq{width: 280px;height: 550px;margin: 10px 0 0 100px;border: 1px solid #bbb;border-radius: 10px;box-shadow: 3px 3px 10px rgba(0,0,0,0.3);}
+#qq{width: 280px;height: 540px;margin: 10px 0 0 100px;border: 1px solid #bbb;border-radius: 10px;box-shadow: 3px 3px 10px rgba(0,0,0,0.3);}
 
 /*qq标题*/
 #qqTitle{width: 100%;height: 30px;margin-top: 4px}
@@ -12,7 +13,7 @@ img{border: 0;}
 
 /*用户信息*/
 #myInfo{width: 100%; height: 100px; }
-#myHead{width: 40px;height: 40px;border: 4px solid #fff; background-image: url("../image/myHead.png");float: left;background-repeat: no-repeat;margin: 20px 0 0 10px;}
+#myHead{width: 40px;height: 40px;border: 4px solid #fff; background-image: url("../image/g.jpg");float: left;background-repeat: no-repeat;margin: 20px 0 0 10px;}
 #myName{font-size: 16px;color: black;font-size: bold;  font-family: 微软雅黑;display: block;line-height: 70px;}
 .gongNeng{width: 207px;height: 20px;background-image: url("../image/icons_list.png");background-repeat: no-repeat;margin: 10px;}
 .gong{width: 15px;height: 15px;cursor: pointer;float: left;margin-left: 5px;cursor: pointer;}
@@ -43,17 +44,30 @@ img{border: 0;}
 .shuRuKhuang{width: 420px;height: 35px;border: 1px solid #222;float: left;margin: 8px 8px 7px 100px;background-color: #fff;}
 .fasong{width: 100px;height: 32px;border: 1px solid #222;border-radius: 7px;float: right;margin: 8px 15px 7px ;background-color: #2894ff ;/*后面为字体居中*/color: #fff;line-height: 35px;font-family: 微软雅黑;font-size: 14px; text-align: center; cursor: pointer;}
 
+#memberTab{width: 100%;height: 40px;border-bottom: 2px solid #CCCCCC;}
+.tabYangshi{width: 92.3px;height: 29px;float: left;cursor: pointer;border-right: 1px solid #CCCCCC;font-family: 微软雅黑;font-size: 17px;text-align: center;display: block;padding-top: 10px}
+.activeTab{color: #0AA7FF}
+
+.friendYangshi{width: 100%;height: 38px;border-bottom: 1px solid #CCCCCC;cursor: pointer;}
+.smallImg{width: 16px;height: 20px;background-image: url("../image/open_arrow.png");float: left;margin: 10px 0 0 5px;cursor: pointer;}
+.groupName{width: 100px;height: 20px;float: left;margin: 10px 0 0 5px;font-family: 微软雅黑;font-size: 14px;cursor: pointer;}
+.groupN{width: 30px;height: 20px;float: right;margin: 10px 10px 0 0;color: #808080;font-size: 12px;cursor: pointer;}
+.qunYangshi{width: 100%;height: 60px;border-bottom: 1px solid #CCCCCC;cursor: pointer;}
+.qunImg{width: 40px;height: 40px;background-image: url("../image/getface.jpg");float: left;margin: 10px 0 0 5px;cursor: pointer;}
+.taoImg{width: 30px;height: 30px;background-image: url("../image/discu_avatar.png");float: left;margin: 15px 0 0 5px;cursor: pointer;}
+
+
 /*contrl*/
-#contrl{width: 280px;height: 70px;background-color: #373737;border-radius: 7px}
-#contrlhuiHua{width: 70px;height: 70px;float: left;background-image: url("../image/huiHuaclick.png");background-repeat: no-repeat;cursor: pointer;background-color: #1E1E1E;border-bottom-left-radius: 7px}
-#contrllianXiren{ width: 70px;height: 70px;float: left;background-image: url("../image/lianXiren.png");background-repeat: no-repeat;cursor: pointer;}
-#contrlfaXian{width: 70px;height: 70px;float: left;background-image: url("../image/faXian.png");background-repeat: no-repeat;cursor: pointer;}
-#contrlsheZhi{width: 70px;height: 70px;float: left;background-image: url("../image/sheZhi.png");background-repeat: no-repeat;cursor: pointer;border-bottom-right-radius: 7px}
+#contrl{width: 280px;height: 60px;background-color: #373737;border-radius: 7px}
+#contrlhuiHua{width: 70px;height: 60px;float: left;background-image: url("../image/huiHuaclick.png") ;background-position: 10px 5px; background-repeat: no-repeat;cursor: pointer;background-color: #1E1E1E;border-bottom-left-radius: 7px;background-size: 60%;}
+#contrllianXiren{ width: 70px;height: 60px;float: left;background-image: url("../image/lianXiren.png");background-position: 8px 5px;background-repeat: no-repeat;cursor: pointer;background-size: 60%;}
+#contrlfaXian{width: 70px;height: 60px;float: left;background-image: url("../image/faXian.png");background-position: 8px 5px;background-repeat: no-repeat;cursor: pointer;background-size: 60%;}
+#contrlsheZhi{width: 70px;height: 60px;float: left;background-image: url("../image/sheZhi.png");background-position: 8px 5px;background-repeat: no-repeat;cursor: pointer;border-bottom-right-radius: 7px;background-size: 60%;}
 .wenZi{color: #FFFFFF;font-family: 微软雅黑;font-size: 12px;}
 #a{width: 36px;height: 12px;margin: 45px 0 0 15px}
 #b{width: 36px;height: 12px;margin: 45px 0 0 14px}
 #c{width: 36px;height: 12px;margin: 45px auto}
-#d{width: 36px;height: 12px;margin: 45px auto}
+#d{width: 36px;height: 12px;margin: 45px auto;}
 
 #faXianlist{width: 100%;height: 300px;overflow: auto;background-color: #FAFFF0 }
 #kongJian{width: 91px;height: 93px; float: left;background-color: #CBCFD5;border: 1px solid #ECEEF2}
