--- a/xinlang/css/weibo.css
+++ b/xinlang/css/weibo.css
@@ -9,3 +9,17 @@ body{background-image: url("image/body_bg.png");background-repeat: no-repeat;}
 .topMenuLeft1{float: left; width: 70px;height: 40px;background-image: url("image/bg_nav.png");background-position: 0px -76px;background-repeat: repeat-x;}
 .topMenuLeft{width: 70px;height: 40px;float: left;}
 .topMenuLeftTitle{width: 50px; height: 20px;color: #FFFFFF; font-size: 15px;display: block;padding-top: 10px;padding-left: 18px}
+
+#topSou{width: 235px;height: 24px;float: left;background-image: url("image/sousuo.png");background-position: 0px -5px;margin:7px 0 0 10px;background-repeat: no-repeat;}
+#topSou input{width: 193px;height: 20px;margin: 2px 0 0 10px;border: 0px}
+.topSouCon{background-color: #FFFFFF; width: 232px; height: 260px; padding-top: 10px; border:1px solid #333333; position: absolute; top:33px; left: 650px;}
+.topConSlect{width: 212px;height: 22px;cursor: pointer;padding: 4px 0px 0px 20px;}
+#jieguo{color: #0078B6}
+.topSouCon a{color: #333333;font-size: 12px;}
+.topConSlect:hover{background-color: #E6E6E6};
+
+.topPerson{width: 257px;height: 38px;}
+.personName{width: 83px;height: 38px;float: left;margin-left: 30px;color: #FFFFFF;display: block;line-height:33px;text-align: center;}
+.personName:hover{background-image: url("image/bg_nav.png");background-position: 0px -76px}
+.topSet{width: 42px;height: 38px;float: left;background-image: url("image/bg_line.png");}
+#xinxi{width: 15px;height: 15px; background-position: -225px -6px;background-repeat: no-repeat;}
