--- a/xinlang/css/weibo.css
+++ b/xinlang/css/weibo.css
@@ -48,8 +48,8 @@ img{border-radius: 5px}
 .topCon a{display: block; width: 120px;height: 26px; line-height: 26px; padding: 0 15px; color: rgb(51, 51, 51);font-size: 12px}
 .topCon li:hover{background-color: #E6E6E6}
 
-#mainLeft{width: 150px;height: 665px;float: left;background-color: #F1F1F1}
-.mainLeft1{ width: 150px; height: 193px;margin-top: 10px;border-bottom: 1px solid #D9D9D9}
+#mainLeft{width: 150px;height: 800px;float: left;background-color: #F1F1F1}
+.mainLeft1{ width: 150px; height: 193px;margin-top: 10px;}
 .mainLeft1A li{width: 150px;height: 35px;}
 .mainLeft1A a{width: 130px; height: 35px; display: block; color: rgb(51, 51, 51); padding-left: 20px; font-size: 16px; line-height: 35px;}
 .mainLeft1A i{width: 20px;height: 20px; background-image: url("image/iconA.png");background-repeat: no-repeat;float: left;display: block;margin: 7px 10px 0 0}
@@ -59,10 +59,24 @@ img{border-radius: 5px}
 .mainLeft1li4 i{background-position: 0px -125px;}
 .mainLeft1li5 i{background-position: 0px -150px;}
 .mainLeft1A li:hover{background-color: #E6E6E6}
-
 .mainLeft1B{ width: 150px; height: 43px; border-top: 1px solid #D7D7D7;}
 .mainLeft1B i{width: 20px;height: 20px; background-image: url("image/icon.png");background-repeat: no-repeat;background-position: 0px -124px; float: left;display: block;margin: 7px 10px 0 0}
 .mainLeft1B a{width: 130px; height: 35px; display: block; color: rgb(51, 51, 51); padding-left: 20px; font-size: 16px; line-height: 35px;}
+.mainLeft2{width: 150px; height: auto; position: relative;}
+.mainLeft2fld{ width: 135px; height: 23px;padding: 0 0 6px 15px; margin-top: 10px; border-top: 1px solid rgb(217, 217, 217); border-left: 0; border-right: 0; border-bottom: 0; }
+.mainLeft2fld legend{ padding: 1px 5px 0 5px; color: rgb(128, 128, 128); font-size: 12px; font-weight: 700; line-height: 22px;}
+.mainLeft2Ul{ width: 150px; height: auto;}
+.mainLeft2Ul li{ width: 150px; height: 28px;}
+.mainLeft2Ul a{ width: 100%; height: 100%; display: block;font-size: 11px;color: #333333}
+.em1{float: left; width: 12px; height: 12px; vertical-align: middle; background-image: none; background-position: -75px -50px; margin:8px 5px 0 5px;}
+.em2{float: left; width: 20px; height: 20px; vertical-align: middle; margin:4px 10px 0 0; background-image: url("image/icon.png"); background-position: 0px -149px;}
+.mainLeft2Ul span{ float: left; width: 70px;  height: 26px; display: block; color: rgb(51, 51, 51); line-height: 27px; }
+.open{ margin-left: 20px; cursor: pointer;font-size: 11px;color: #0A8CD2}
+.hide{ display: none;}
+.mainLeft3Ul li{ width: 150px; height: 21px;}
+.mainLeft3Ul a{ width: 150px; height: 21px; display: block; line-height: 21px; color: rgb(51, 51, 51);font-size: 11px;color: #333333;margin-top: 3px}
+.mainLeft3Ul img{ width:16px; height: 16px; display: block; float: left; margin: 2px 10px 0 20px;}
+
 
 
 
