--- a/xinlang/css/weibo.css
+++ b/xinlang/css/weibo.css
@@ -22,7 +22,6 @@ body{background-image: url("image/body_bg.png");background-repeat: no-repeat;}
 .topMenuB{width: 100%;height: 80px;cursor: pointer;}
 .topMenuB li{width: 70px;height: 78px;float: left;padding: 0 0 20px 24px}
 .topMenuB a{color: #333333;font-size: 10px;float: left;}
-img{border-radius: 5px}
 .topMenuA :hover{color: #0A8CD2}
 .topMenuB :hover{color: #0A8CD2}
 
@@ -105,7 +104,7 @@ img{border-radius: 5px}
 .mainCenterBLeftI5 i{ background-position: -275px -100px;}
 
 .mainCenterBRight{ float: right; width: 165px; height: 30px; padding: 5px 0 0 0;}
-.mainCenterBRightR{ width: 80px; height: 28px; color: rgb(230, 65, 65); font-size: 16px; line-height: 26px; display: block; background-color: rgb(230, 65, 65); float: right;border-radius: 5px}
+.mainCenterBRightR{ width: 80px; height: 28px; color: rgb(230, 65, 65); font-size: 16px; line-height: 26px; display: block; background-color: rgb(230, 65, 65); float: right;}
 .mainCenterBRightR span{ width: 80px; height: 26px; display: block; color: #fff;text-align: center;}
 .mainCenterBLeftI7{ line-height: 26px; float: right;}
 
@@ -127,5 +126,63 @@ img{border-radius: 5px}
 .mainCenter3TopRight2{ width: 98px; height: 20px; float: right; border: 1px solid rgb(217, 217, 217); background-color: rgb(242, 242, 242); border-radius: 10px;font-size: 12px}
 .mainCenter3TopRight2 a{ width: 79px; height: 28px; display: block; color: rgb(51,51,51); line-height: 20px; }
 .mainCenter3TopRight2 i{ width: 16px; height: 16px; margin: 2px 3px 0 8px; display: block; background-image: url("image/icon.png"); background-position: -150px -50px; float: left;}
+
+.mainCenter4{ width: 560px; height: auto; padding-top: 20px; text-align: }
+.mainCenter4Main1{ width: 560px; height: 160px;  padding-bottom: 11px; border-bottom: 1px solid #BABCBE;}
+.mainCenter4MainPic{ width: 50px; height: 50px; float: left;}
+.mainCenter4MainContent{ width: 495px; height: auto; float: right;}
+.mainCenter4MainContent1{ width: 100%; height: 16px;}
+.mainCenter4MainContent1 a{ color: #000055; font-size: 14px; font-weight: 700; line-height: 16px; float: left;}
+.mainCenter4MainContent1 i{ cursor: pointer; width: 14px; height: 14px; display: block; float: left; background-image: url("image/icon.png");margin-left: 3px}
+.mainCenter4MainContent1 .i1{ background-position: -300px -175px;}
+.mainCenter4MainContent1 .i2{ background-position: -300px -425px;}
+.mainCenter4MainContent2{ width: 100%; height: auto; padding: 4px 0; color: #333333; line-height: 23px; font-size: 14px;}
+.mainCenter4MainContent3{ width: 100%; height: 71px; padding-bottom: 15px; position: relative; }
+.mainCenter4MainContent3 .smallPic{ cursor: url("image/big.cur"),auto;}
+.mainCenter4MainContent4{ width: 100%; height: 14px;}
+.mainCenter4MainContent4Right{ width: 239px; height: 14px; float: right;}
+.mainCenter4MainContent4Left{ width: 250px; height: 14px; float: left;}
+.mainCenter4MainContent4 a{ color: #0A8CD2; line-height: 14px;font-size: 10px }
+.mainCenter4MainContent4 span{ color: #808080; line-height: 14px;font-size: 10px}
+#mainCenter4MainContent4RightSA em{  float: left; width: 13px; height: 14px; background-image: url("image/icon.png"); background-position: -75px 0px;margin-top: 3px}
+.bigPic{ display: none; position: absolute; top: 0; left: 0;}
+.bigPic img{ width: 440px; height: 270px; cursor: url("image/small.cur"),auto;}
+.mainCenter4Main2{ width: 560px; height: 160px;  padding-bottom: 11px; border-bottom: 1px solid #BABCBE;margin-top: 50px}
+
+.mainRight1{ width: 230px; height: 136px;}
+.mainRight1Main{ width: 190px; height: 83px; margin: 20px 0 0 20px;}
+.mainRight1MainL{ width: 80px; height: 81px; display: block; float: left; }
+.mainRight1MainL img{ width: 100%; height: 100%; }
+.mainRight1MainR{ float: right; width: 100px; height: 36px; padding: 7px 0 0 0; text-align: left;}
+.mainRight1MainR1{ width: 100px; height: 16px; display: block; font-weight: 700; line-height: 16px; color: rgb(51,51,51);font-size: 13px}
+.mainRight1MainR2{ display: block; width: 29px; height: 9px;padding: 5px 0 0 6px; background-image: url("image/level.png"); background-position: 0px -15px;}
+.mainRight1MainR2 span{ width: 26px; height: 10px; display: block; background-image: url("image/level.png"); background-position: 0 -580px;}
+.mainRight2Main{ width: 190px; height: 83px; margin: 0 20px;}
+.mainRight2Main li{ float: left; width: 24px; height: 33px;padding: 0 5px 0 0; margin-right: 5px; border-right: 1px solid rgb(230, 230, 230); }
+.mainRight2MainLia{ width: 100%; height: 100%; color: rgb(51,51,51);}
+.mainRight2MainLia strong{ font-size: 18px; font-weight: 700;  }
+.mainRight2MainLia span{ font-size: 12px; font-style: normal;}
+#mainRight2MainLiS{ border-right: 0px;}
+.mainRight2{ width: 230px; height: auto; position: relative;}
+.change{ width: 50px; height: 15px; border-radius: 10px; line-height: 15px; position: absolute; top: 0px; right: 45px; border: 1px solid #DCDCDC; font-size: 12px;color: #79797D;text-align: center;}
+.change:hover{ background-color: #FFA00A; color: #fff;}
+.mainLeft2fld2{ width: 118px;}
+.mainLeft2fld2 legend{ font-size: 14px; font-weight: 700; color: rgb(51,51,51); line-height: 15.75px;}
+.mainRight2D1{ width: 190px; height: 95px; padding: 6px 20px;}
+.mainRight2D1T{ width: 190px; height: 50px;}
+.mainRight2D1TPic{ width: 50px; height:50px; display: block; float: left;}
+.mainRight2D1TPic img{ width: 100%; height: 100%;}
+.mainRight2D1TPicC{ width: 130px; height: 50px; float: right; text-align: left;}
+.mainRight2D1TPicC1{ line-height: 20px; color: rgb(51,51,51); }
+.mainRight2D1TPicC2{ width: 46px; height: 20px; border:1px solid rgb(217, 217, 217); color: rgb(51,51,51); background-color:rgb(242, 242, 242); display: block; }
+.mainRight2D1TPicC2 span{ width: 42px; height: 16px; display: block; *width: 46px; *height: 20px; padding: 2px 0px 0 4px; border:1px solid #fff; }
+.mainRight2D1TPicC2 em{ color: rgb(255, 160, 10); width: 9px; height: 19px; display: block; float: left; font-size: 16px; font-weight: 700; line-height: 14px; font-style: normal;}
+.mainRight2D1TPicC2:hover{ background-color: rgb(255, 160, 10); border:1px solid rgb(255, 160, 10);}
+.mainRight2D1B{ width: 174px; height: 20px; *width: 190px; *height: 22px; border: 1px solid rgb(230, 230, 230); margin: 8px 0 5px 0; background-color: rgb(242,242,242);}
+.mainRight2D1B p{ color: rgb(128, 128, 128); line-height: 20px; text-align: left; margin-left: 10px;}
+.mainRight2D2{ width: 190px; height: 14px; margin: 0px 20px 0 20px;}
+.mainRight2D2L{ float: left;}
+.mainRight2D2R{ float: right;}
+
 
 #mainRight{width: 188px;height:800px;border-left: 2px solid #D9D9D9;float: right;background-color: #FAFAFA}
