--- a/daohang/style.css
+++ b/daohang/style.css
@@ -2,9 +2,13 @@
 a{text-decoration: none;}
 img{border: 0;}
 
+
+
 .github{width: 120px;height: 120px;}
 
 #daohang{width: 640px;height: 600px;margin: -130px auto;}
-#qqShouye{width: 180px;height: 180px;margin: 10px;float: left;padding-top: 90px}
+#qqShouye{width: 180px;height: 180px;margin: 10px;float: left;padding-top: 90px;}
 #bieShu{width: 180px;height: 180px;margin: 10px;float: left;}
 #miNiqq{width: 180px;height: 180px;margin: 10px;float: right;padding-top: 70px}
+#weibo{width: 180px;height: 180px;margin: 10px;padding-top: 70px;margin-left: 10px}
+
